<resources>
	<string name="app_name">Template</string>
	<string name="product_advertising">加入城配，接单赚钱</string>
	<string name="loading">加载中…</string>
	<string name="handling">处理中，请等待…</string>
	<string name="upload_success">上传成功</string>
	<string name="no_more_data">没有更多数据了</string>
	<string name="load_finished">加载完成</string>
	<string name="permission_denied">应用缺少必要的权限，无法使用！</string>
	<string name="modify_server_address">修改服务器地址需要重启APP，是否继续？</string>
	<string name="msg_exit_app">再按一次退出APP！</string>
	
	<string name="task_hall">接单大厅</string>
	<string name="workbench">每日出车</string>
	<string name="personal_center">个人中心</string>
	<string name="task_history">接单历史</string>
	
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="exit">退出</string>
	<string name="save">保存</string>
	<string name="close">关闭</string>
	<string name="download">下载</string>
	<string name="skip">跳过</string>

	<!-- DEBUG MODE -->
	<string name="server_dev">Dev</string>
	<string name="server_master">Master</string>
	<string name="server_stable">Stable</string>
	
	<string name="login">登录</string>
	<string name="sign_up">注册</string>
	<string name="mobile">手机号</string>
	<string name="password">密码</string>
	<string name="input_mobile">请输入手机号</string>
	<string name="input_password">请输入密码</string>
	<string name="forget_password">忘记密码？</string>
	<string name="msg_forget_password">忘记密码请联系：\n12345678901</string>
	<string name="error_mobile_empty">手机号不能为空</string>
	<string name="error_mobile_format">手机号格式错误</string>
	<string name="error_password_empty">密码不能为空</string>
	<string name="error_password_invalid">密码格式错误</string>
	
	<string name="name">姓名</string>
	<string name="input_name">请输入真实姓名</string>
	<string name="confirm_password">确认密码</string>
	<string name="residential_city">居住城市</string>
	<string name="hint_residential_city">请选择居住城市</string>
	<string name="driver_agreement">司机协议</string>
	<string name="sign_up_driver_agreement">点击“注册”即代表同意《司机协议》</string>
	<string name="error_name_empty">姓名不能为空</string>
	<string name="error_name_format">姓名格式错误</string>
	<string name="error_repeat_password">两次输入密码不一致</string>
	<string name="error_residential_city">请选择居住城市</string>

	<string name="driver_join">司机加盟</string>
	<string name="perfect_info_statement">以下信息仅用于资质审核，绝不外泄！</string>
	<string name="basic_info">基本信息</string>
	<string name="avatar">头像</string>
	<string name="id_number">身份证号</string>
	<string name="id_period">身份证有效期</string>
	<string name="driver_license_number">驾驶证号</string>
	<string name="driver_license_period">驾驶证有效期</string>
	<string name="vehicle_permitted">准驾车型</string>
	<string name="hint_avatar_photo">请上传头像照片</string>
	<string name="hint_id_number">请输入身份证号</string>
	<string name="error_id_number_format">身份证号码格式错误</string>
	<string name="hint_id_period">请选择身份证有效期</string>
	<string name="hint_driver_license_number">请输入驾驶证号</string>
	<string name="hint_driver_license_period">请选择驾驶证有效期</string>
	<string name="hint_vehicle_permitted">请选择准驾车型</string>
	<string name="hint_id_card_front_photo">请上传身份证—头像面照片</string>
	<string name="hint_id_card_back_photo">请上传身份证—国微面照片</string>
	<string name="hint_id_card_in_hand_photo">请上传手持身份证照片</string>
	<string name="hint_driver_license_photo">请上传驾驶证照片</string>
	<string name="credentials_info">证件信息</string>
	<string name="tips_credentials_info">提示：请保证证件清晰完整</string>
	<string name="id_card_front">身份证—头像面</string>
	<string name="id_card_back">身份证—国微面</string>
	<string name="id_card_in_hand">手持身份证</string>
	<string name="driver_license_photo">驾驶证照片</string>
	<string name="confirm_to_submit">确认提交</string>
	<string name="long_term">长期</string>

	<string name="take_picture">拍照</string>
	<string name="choose_from_album">从相册选择</string>
	<string name="capture_failed">拍照失败，请重试！</string>
	<string name="pick_photo_failed">选择图片失败，请重试！</string>
	<string name="crop_photo_failed">裁剪图片失败，请重试！</string>
	<string name="compress_photo_failed">压缩图片失败，请重试！</string>

	<string name="total_mileage">总里程</string>
	<string name="estimate_time">预计耗时</string>
	<string name="car_model">车型</string>
	<string name="time">时间</string>
	<string name="to_grab">去抢单</string>
	
	<string name="setting">设置</string>
	<string name="about">关于我们</string>
	<string name="bankcard">银行卡</string>
	<string name="bind_bankcard">添加银行卡</string>
	<string name="work_bench">每日出车</string>
	<string name="task_list">任务列表</string>
	<string name="task_detail">任务详情</string>
	<string name="bid_confirm">抢单确认</string>
	<string name="bid_history_list">接单历史列表</string>
	<string name="work_list">出车列表</string>
	<string name="upload_receipt">上传回单</string>
	<string name="receipt_info">回单信息</string>
	<string name="personal_info">个人信息列表</string>
	<string name="finance_info">钱包</string>
	<string name="business_list">出车明细</string>
	<string name="withdraw">提现</string>
	<string name="withdraw_history">历史提现</string>
	<string name="withdraw_money">可提金额</string>
	<string name="withdraw_history_list">提现历史记录</string>
	<string name="deposit">押金</string>
	<string name="my_vehicle">我的车辆</string>
	<string name="modify_password">修改密码</string>
	<string name="modify">修改</string>
	
	<string name="bank_card_opening_city">办卡城市</string>
	<string name="bank_card_number">银行卡号</string>
	<string name="opening_bank">开户行</string>
	<string name="un_drawable_money">不可提金额</string>
	<string name="frozen_money">冻结金额</string>
	<string name="out_of_account_money">未入账金额</string>
	<string name="old_pwd">旧密码</string>
	<string name="new_pwd">新密码</string>
	<string name="confirm_new_pwd">确认密码</string>
	
	<string name="arrangement_history">历史出车</string>
	
	<string name="vehicle_number">车牌号(必填)</string>
	<string name="vehicle_type">车型(必填)</string>
	<string name="vehicle_reg_date">车辆注册日期</string>
	<string name="vehicle_owner">所有人</string>
	<string name="vehicle_model">品牌型号</string>
	<string name="date_of_production">出厂日期</string>
	<string name="vehicle_recognition_code">车辆识别代号</string>
	<string name="vehicle_engine_code">发动机号码</string>
	<string name="vehicle_license_validity_date">行驶证有效期</string>
	<string name="vehicle_license_pic">行驶证照片</string>
	
	<string name="my_information">我的资料</string>
	<string name="id_card_number">身份证号</string>
	<string name="id_card_number_validity_date">身份证有效期</string>
	<string name="driving_licence_number">驾驶证号</string>
	<string name="driving_licence_validity_date">驾驶证有效期</string>
	<string name="permit_vehicle_type">准驾车型</string>
	<string name="emergency_person_name">紧急联系人姓名</string>
	<string name="relationship">与本人关系</string>
	<string name="emergency_person_phone">紧急联系人手机号码</string>


</resources>
