<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include layout="@layout/common_title" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:orientation="vertical"
			android:paddingLeft="24dp"
			android:paddingTop="@dimen/horizontal_margin"
			android:paddingRight="24dp"
			android:paddingBottom="@dimen/vertical_margin">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:text="@string/product_advertising"
				android:textSize="24dp" />

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/name"
					style="@style/EditText"
					android:hint="@string/input_name"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:maxLength="@integer/name_len_max"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/mobile"
					style="@style/EditText"
					android:hint="@string/input_mobile"
					android:imeOptions="actionNext"
					android:inputType="phone"
					android:maxLength="@integer/mobile_number_len"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:passwordToggleEnabled="true">

				<EditText
					android:id="@+id/password"
					style="@style/EditText"
					android:hint="@string/input_password"
					android:imeOptions="actionNext"
					android:inputType="textPassword"
					android:maxLength="@integer/password_len_max"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:passwordToggleEnabled="true">

				<EditText
					android:id="@+id/repeat_password"
					style="@style/EditText"
					android:hint="@string/confirm_password"
					android:imeOptions="actionDone"
					android:inputType="textPassword"
					android:maxLength="@integer/password_len_max"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<LinearLayout
				android:id="@+id/layout_city"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/residential_city"
					android:textAppearance="@style/Text.F16"
					android:textColor="@color/hint"
					android:textSize="@dimen/font_18" />

				<TextView
					android:id="@+id/tv_city"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:drawableRight="@drawable/arrow_right"
					android:gravity="center_vertical|right"
					android:hint="@string/hint_residential_city"
					android:textAppearance="@style/Text.F18.Black"
					android:textColorHint="@color/hint" />
			</LinearLayout>

			<View style="@style/Divider.Horizontal" />

			<Button
				android:id="@+id/btn_sign_up"
				style="@style/SingleRoundedBtn"
				android:layout_marginTop="50dp"
				android:text="@string/sign_up" />

			<TextView
				android:id="@+id/tv_agreement"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="30dp"
				android:text="@string/sign_up_driver_agreement" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>