<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/tv_start_end"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		tools:text="起点—终点" />

	<TextView
		android:id="@+id/tv_price"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintRight_toRightOf="parent"
		tools:text="￥1000" />

	<TextView
		android:id="@+id/tv_total_mileage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/total_mileage"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_start_end" />

	<TextView
		android:id="@+id/tv_estimate_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/estimate_time"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_total_mileage" />

	<TextView
		android:id="@+id/tv_car_model"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/car_model"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_estimate_time" />

	<TextView
		android:id="@+id/tv_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/time"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_car_model" />

	<Button
		android:id="@+id/btn_action"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/to_grab"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		style="@style/Divider.Horizontal"
		android:layout_height="8dp"
		android:layout_marginTop="10dp"
		app:layout_constraintTop_toBottomOf="@id/tv_time" />

</android.support.constraint.ConstraintLayout>