<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="bottom"
	android:orientation="vertical"
	android:padding="@dimen/horizontal_margin">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_pick_photo_item"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tv_capture"
			style="@style/PickPhotoItem"
			android:text="@string/take_picture" />

		<View
			style="@style/Divider.Horizontal"
			android:layout_marginLeft="@dimen/horizontal_margin"
			android:layout_marginRight="@dimen/horizontal_margin" />

		<TextView
			android:id="@+id/tv_pick"
			style="@style/PickPhotoItem"
			android:text="@string/choose_from_album" />
	</LinearLayout>

	<TextView
		android:id="@+id/tv_cancel"
		style="@style/PickPhotoItem"
		android:layout_marginTop="12dp"
		android:background="@drawable/bg_pick_photo_item"
		android:text="@string/cancel"
		android:textColor="#999999" />

</LinearLayout>
