<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<include layout="@layout/common_title" />
	
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/vertical_margin"
		android:orientation="vertical">
		
		<TextView style="@style/Text.F16.Black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="@dimen/vertical_margin"
			android:text="@string/old_pwd"
		/>
		
		<EditText
			android:id="@+id/old_pwd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/input_mobile"
			android:imeOptions="actionNext"
			android:inputType="textPassword"
			android:maxLines="1"
			android:singleLine="true" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/vertical_margin"
		android:orientation="vertical">
		
		<TextView style="@style/Text.F16.Black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="@dimen/vertical_margin"
			android:text="@string/new_pwd"
		/>
		
		<EditText
			android:id="@+id/new_pwd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/input_mobile"
			android:imeOptions="actionNext"
			android:inputType="textPassword"
			android:maxLines="1"
			android:singleLine="true" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/vertical_margin"
		android:orientation="vertical">
		
		<TextView style="@style/Text.F16.Black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="@dimen/vertical_margin"
			android:text="@string/confirm_new_pwd"
		/>
		
		<EditText
			android:id="@+id/confirm_new_pwd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/input_mobile"
			android:imeOptions="actionNext"
			android:inputType="textPassword"
			android:maxLines="1"
			android:singleLine="true" />
	
	</android.support.design.widget.TextInputLayout>
	
	<Button android:id="@+id/submit"
		style="@style/Text.F16.White"
		android:layout_width="120dp"
		android:layout_height="60dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/vertical_margin"
		android:background="@color/blue"
		android:text="@string/ok" />
</LinearLayout>