<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingLeft="24dp"
			android:paddingRight="24dp"
			android:paddingBottom="@dimen/vertical_margin">


			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="80dp"
				android:layout_marginBottom="50dp"
				android:adjustViewBounds="true"
				android:scaleType="centerCrop"
				android:src="@mipmap/ic_launcher" />

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/mobile"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/input_mobile"
					android:imeOptions="actionNext"
					android:inputType="phone"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/input_password"
					android:imeActionId="6"
					android:imeActionLabel="@string/login"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/btn_login"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/login"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/tv_forget_password"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal|bottom"
				android:layout_marginTop="30dp"
				android:text="@string/forget_password"
				android:textAppearance="@style/LinkText" />
		</LinearLayout>
	</ScrollView>

	<TextView
		android:id="@+id/tv_sign_up"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/title_bar_height"
		android:layout_gravity="right"
		android:gravity="center"
		android:paddingRight="19dp"
		android:text="@string/sign_up"
		android:textAppearance="@style/LinkText" />

</FrameLayout>