<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@color/white"
		android:paddingLeft="20dp"
		android:paddingRight="20dp">

		<TextView
			android:id="@+id/tv_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:gravity="center"
			android:textColor="#333333"
			android:textSize="@dimen/font_18"
			tools:text="身份证有效期" />

		<TextView
			android:id="@+id/tv_cancel"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:background="@null"
			android:gravity="center_vertical"
			android:text="@string/cancel"
			android:textColor="@color/link_text"
			android:textSize="@dimen/font_16" />

		<TextView
			android:id="@+id/tv_ok"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_alignParentRight="true"
			android:gravity="center_vertical"
			android:text="@string/ok"
			android:textColor="@color/link_text"
			android:textSize="@dimen/font_16" />
	</RelativeLayout>

	<View style="@style/Divider.Horizontal" />

	<TextView
		android:id="@+id/tv_forever"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@drawable/btn_white_to_gray"
		android:gravity="center"
		android:text="@string/long_term"
		android:textColor="@color/link_text"
		android:textSize="20dp" />

	<View style="@style/Divider.Horizontal" />

	<LinearLayout
		android:id="@+id/timepicker"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/white"
		android:orientation="horizontal">

		<com.contrarywind.view.WheelView
			android:id="@+id/year"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.96" />

		<com.contrarywind.view.WheelView

			android:id="@+id/month"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<com.contrarywind.view.WheelView
			android:id="@+id/day"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<com.contrarywind.view.WheelView
			android:id="@+id/hour"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<com.contrarywind.view.WheelView
			android:id="@+id/min"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<com.contrarywind.view.WheelView
			android:id="@+id/second"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>


</LinearLayout>